--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      </main>
      <footer>
         Fale conosco pelo Instagran <a href="https://instagran.com/treineme" target="_blank">@treineme
-    </div>
+     </footer>
     
     <img id="balls" src="images/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página">
     
